<resources>
    <string name="app_name">UniPlan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="Type">"Type: "</string>
    <string name="Day">"Day: "</string>

    <string name="eventtype0">TEST</string>
    <string name="eventtype1">EXAM</string>
    <string name="eventtype2">QUIZ</string>
    <string name="eventtype3">ASSIGNMENT</string>
    <string name="eventtype4">MISC.</string>

    <string name="instructortype0">PROFESSOR</string>
    <string name="instructortype1">T.A.</string>

    <string name="current_date">June, 2016</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>
</resources>
